# mirror-remote

./: .clang  .clang-format  .clang_complete  Makefile.am  README  configure.ac  meson.build  notes
doc/: Makefile.am  doxyconfig.in  meson.build
man/: Makefile.am  meson.build  mirror-remote.1
src/: Makefile.am  confmgr.c  confmgr.h  crypto.c  crypto.h  err_codes.h  gitmgr.c  gitmgr.h  logging.c  logging.h  main.c  memutils.c  memutils.h  meson.build  mirror.c  mirror.h  server.c  server.h  thread_pool.c  thread_pool.h  url_parser.c  url_parser.h  utils.c  utils.h
src/joylent/: http_parser.c  http_parser.h
